reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__envelope.rs_line_215_col_9.log

*** crates/tracewake-core/src/events/envelope.rs:215:9: replace EventKind::stream -> EventStream with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/events/envelope.rs
+++ replace EventKind::stream -> EventStream with Default::default()
@@ -207,75 +207,17 @@
             schema_version: EventSchemaVersion::V1,
             physical_mutating: self.physical_mutating(),
             cause_required: self.cause_required(),
             replay_handling: EventReplayHandling::for_stream(self.stream()),
         }
     }
 
     pub const fn stream(self) -> EventStream {
-        match self {
-            EventKind::ControllerAttached | EventKind::ControllerDetached => {
-                EventStream::Controller
-            }
-            EventKind::ActionStarted
-            | EventKind::ActionFailed
-            | EventKind::ActionRejected
-            | EventKind::NoHumanAdvanceStarted
-            | EventKind::NoHumanAdvanceCompleted => EventStream::Diagnostic,
-            EventKind::InitialBeliefSeeded
-            | EventKind::RoleAssignmentNoticeRecorded
-            | EventKind::StartingBeliefRecorded
-            | EventKind::ObservationRecorded
-            | EventKind::BeliefUpdated
-            | EventKind::ExpectationContradicted
-            | EventKind::ContainerChecked => EventStream::Epistemic,
-            EventKind::NeedDeltaApplied
-            | EventKind::NeedThresholdCrossed
-            | EventKind::CandidateGoalsEvaluated
-            | EventKind::IntentionStarted
-            | EventKind::IntentionContinued
-            | EventKind::IntentionSuspended
-            | EventKind::IntentionResumed
-            | EventKind::IntentionCompleted
-            | EventKind::IntentionFailed
-            | EventKind::IntentionAbandoned
-            | EventKind::IntentionInterrupted
-            | EventKind::RoutineStepStarted
-            | EventKind::RoutineStepCompleted
-            | EventKind::RoutineStepFailed
-            | EventKind::DecisionTraceRecorded
-            | EventKind::SleepStarted
-            | EventKind::SleepCompleted
-            | EventKind::SleepInterrupted
-            | EventKind::FoodServiceUsed
-            | EventKind::EatFailed
-            | EventKind::WorkBlockStarted
-            | EventKind::WorkBlockCompleted
-            | EventKind::WorkBlockFailed
-            | EventKind::ContinueRoutineProposed
-            | EventKind::ContinueRoutineAccepted
-            | EventKind::ContinueRoutineRejected
-            | EventKind::StuckDiagnosticRecorded
-            | EventKind::NoHumanDayStarted
-            | EventKind::NoHumanDayCompleted => EventStream::Agent,
-            EventKind::ReplayProjectionRebuilt => EventStream::ReplayDebug,
-            EventKind::ActorMoved
-            | EventKind::DoorOpened
-            | EventKind::DoorClosed
-            | EventKind::ContainerOpened
-            | EventKind::ContainerClosed
-            | EventKind::ItemRemovedFromContainer
-            | EventKind::ItemTakenFromPlace
-            | EventKind::ItemPlacedInContainer
-            | EventKind::ItemPlacedInPlace
-            | EventKind::FoodConsumed
-            | EventKind::ActorWaited
-            | EventKind::TimeAdvanced => EventStream::World,
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     pub const fn physical_mutating(self) -> bool {
         matches!(
             self,
             EventKind::ActorMoved
                 | EventKind::DoorOpened
                 | EventKind::DoorClosed


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventStream: Default` is not satisfied
   --> crates/tracewake-core/src/events/envelope.rs:215:9
    |
215 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventStream`
   --> crates/tracewake-core/src/events/envelope.rs:68:1
    |
 68 | pub enum EventStream {
    | ^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventStream: Default` is not satisfied
   --> crates/tracewake-core/src/events/envelope.rs:215:9
    |
215 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventStream`
   --> crates/tracewake-core/src/events/envelope.rs:68:1
    |
 68 | pub enum EventStream {
    | ^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
